--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,8 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".LoginActivity">
 
+    <!-- test comment here -->
+
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imgV_logo3"
         android:layout_width="314dp"
         android:layout_height="113dp"
         android:layout_marginStart="48dp"
@@ -16,9 +18,13 @@
         android:layout_marginEnd="49dp"
         android:layout_marginRight="49dp"
         android:layout_marginBottom="481dp"
+        android:contentDescription="logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo" />
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/logo3" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
