--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -43,7 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="48dp"
         android:layout_marginLeft="48dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="62dp"
         android:text="Password"
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/edtxt_password"
@@ -54,9 +54,9 @@
         android:id="@+id/edtxt_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="88dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:textSize="18sp"
@@ -68,8 +68,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="75dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:textSize="18sp"
@@ -81,6 +81,7 @@
         android:layout_width="119dp"
         android:layout_height="58dp"
         android:layout_marginTop="60dp"
+        android:onClick="onClickListenerButton"
         android:text="Sign In"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
